fix: A styling improvement - scrollbar on sections elements

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,7 +12,7 @@ article {
 }
 
 section {
-    overflow: scroll;
+    overflow: auto;
 }
 
 section.description {
